news pages overflow text fix

--- a/app/stylus/blocks/full-news.styl
+++ b/app/stylus/blocks/full-news.styl
@@ -18,6 +18,7 @@
             font-size-func(35)
             margin-top 0
             margin-bottom 25px
+            hyphens()
 
             @media (min-width 480px)
                 font-size-func(38)
@@ -49,6 +50,8 @@
         padding 15px
         border-radius 5px
         font-size-func(18)
+        ellipsis()
+        max-width 100%
 
     &__text
         font-size-func(16)
